# raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  color.h  image.ppm  main.cpp  ray.h  vec3.h
src/: camera.cpp  camera.h  main.cpp  vec3.h
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
